<package>
    <name>odometry</name>
    <version>0.1.0</version>
    <description>
        This package provides odometry filtered data from any combination of IMU and Stereo Camera.
    </description>
    <maintainer email="tal.regev@gmail.com">Tal Regev</maintainer>
    <author email="tal.regev@gmail.com">Tal Regev</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>mrbsp_utils</build_depend>
    <build_depend>mrbsp_msgs</build_depend>
    <build_depend>logger</build_depend>
    <export>
    <!-- Other tools can request additional information be placed here -->

    </export>
</package>
