<?xml version="1.0"?>
<package>
  <name>planner_node</name>
  <version>3.0.0</version>
  <description>The planner_node package</description>

  <maintainer email="asafeniger@gmail.com">Asaf Feniger</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/planner_node</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="andrej@technion.ac.il">Andrej Kitanov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>mrbsp_msgs</build_depend>
  <build_depend>mrbsp_utils</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>libgraphviz-dev</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>mrbsp_utils</run_depend>
  <run_depend>cv_bridge</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
